# flextd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  test.yml
flextd/flexcoco/: coco_base.py  coco_semantic_segmentation.py  utils.py
flextds/flexcoco/: coco_base.py  coco_semantic_segmentation.py  utils.py
notebooks/: sample.ipynb
tests/data/: sample_coco.json
tests/flexcoco/: test_coco_base.py  test_coco_semantic_segmentation.py  test_sample_coco.py  test_utils.py
